--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,4 +1,2 @@
 config:
-  info: "main branch springcloud-config/config-dev.yml"
-server:
-  port: 8899
+  info: "main branch springcloud-config/config-dev.yml version=1"
